# simCTC

./: .gitignore  Makefile.am  README.md  clang-format.sh  configure.ac  cppcheck.sh
src/: app.cc  app.h  logger.cc  logger.h  main.cc
src/gui/: window.h
